add some analyse for producer client and consumer client and broker code